testdata/zkc/invalid/debug_04.zkc
//error:10:5-11:debug function cannot write memory
memory ram(address:u8) -> (byte:u8)

fn main<ram>() {
    report()
}

#[debug]
fn report<ram>() {
    ram[0] = 0xff
}
